# falkland-bycatch-riskscape

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  config.run.yaml  config.yaml  datasets.md  definitions.md  generate_h3_grid.py  layer_1.md  modis_copernicus_compare_falklands.ipynb  notes.md  project-proposal.md  pyproject.toml  pyrightconfig.json  recommendations.md
docs/: 00_0_notes.md  00_baycatch_risk_model_specification.md  00_data_request.md  00_specification.md  00_workflow.md  90_baycatch_risk_model_specification.md  GFW_API.v3.postman_collection.json  README.md  authentication.md  baycatch_risk_modeling_approach.md  bayesian_gmm_component_report.txt  bayesian_gmm_component_selection.md  block_cv_environmental_kfold_note.md  block_cv_extra_trees_validation_summary.md  block_cv_kmeans_k15_test_fraction_note.md  block_cv_kmeans_k15_vs_k30_note.md  chlorophyll_log_transformation.md  code_style_guide.md  conceptual_architecture.md  current_status.md  data_folder_assessment.md  datasets.md  forecasting_proposal.md  hybrid_prediction_gate_review.md  kmeans_k15_seascape_proof_of_concept.md  layer_0.md  layer_1.md  layer_1b.md  layer_1b_implementation.md  layer_2A_gradientes.md  layer_2B_anomalies.md  layer_2_diagnostic_plots.md  layer_2_wind.md  model_ready.md  notebooks.md  notes.md  pipelining_overview.md  poll.md  preprocessing.md  publishing_checklist.md  (+9 more)
notebooks/: 00_pipeline_execution.ipynb  01_data_sources_and_scope.ipynb  02_data_sources_and_inputs.ipynb  03_feature_engineering.ipynb  04_model_design_and_decisions.ipynb  05_predictions_and_risk_interpretation.ipynb  (+5 more)
(+294 files in other folders)
